--- a/src/components/LeaderboardTable/components/Error/Error.module.scss
+++ b/src/components/LeaderboardTable/components/Error/Error.module.scss
@@ -9,4 +9,5 @@
   color: rgba($white, 0.7);
   padding: 2rem;
   font-weight: 300;
+  flex-grow: 1;
 }
